Somehow this branch is all messed up now

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 
 Malmö högskola/Webutveckling2_Klient/imdb_quick_search/.idea/workspace.xml
+Malmö högskola/Webutveckling2_Klient/imdb_quick_search/.idea/workspace.xml
