undid all the styling for  buttons in sidebar
will try to implement splash screen

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 Malmö högskola/Webutveckling2_Klient/imdb_quick_search/.idea/workspace.xml
 Malmö högskola/Webutveckling2_Klient/imdb_quick_search/.idea/workspace.xml
+Malmö högskola/Webutveckling2_Klient/imdb_quick_search/.idea/workspace.xml
