--- a/car-shop/package.json
+++ b/car-shop/package.json
@@ -12,6 +12,7 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.7",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "serverless-http": "^2.7.0"
   }
 }
