--- a/car-shop/package.json
+++ b/car-shop/package.json
@@ -11,6 +11,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
     "pug": "2.0.0-beta11",
     "serverless-http": "^2.7.0"
